// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additionalData option should use same EOL on all os ('dart-sass', 'legacy' API, 'sass' syntax): css 1`] = `
"a {
  color: hotpink;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'legacy' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"a {
  color: hotpink;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('node-sass', 'legacy' API, 'sass' syntax): css 1`] = `
"a {
  color: hotpink; }

body {
  color: hotpink; }
"
`;

exports[`additionalData option should use same EOL on all os ('node-sass', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('node-sass', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('node-sass', 'legacy' API, 'scss' syntax): css 1`] = `
"a {
  color: red; }

body {
  color: hotpink; }
"
`;

exports[`additionalData option should use same EOL on all os ('node-sass', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('node-sass', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'legacy' API, 'sass' syntax): css 1`] = `
"a {
  color: hotpink;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'legacy' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"a {
  color: hotpink;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('dart-sass', 'legacy' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a function ('dart-sass', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('dart-sass', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('dart-sass', 'legacy' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a function ('dart-sass', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('dart-sass', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a function ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a function ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('node-sass', 'legacy' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work as a function ('node-sass', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('node-sass', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('node-sass', 'legacy' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work as a function ('node-sass', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('node-sass', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('sass-embedded', 'legacy' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a function ('sass-embedded', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('sass-embedded', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('sass-embedded', 'legacy' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a function ('sass-embedded', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('sass-embedded', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a function ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a function ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a function ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a function ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('dart-sass', 'legacy' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a string ('dart-sass', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('dart-sass', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('dart-sass', 'legacy' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a string ('dart-sass', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('dart-sass', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a string ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a string ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('node-sass', 'legacy' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work as a string ('node-sass', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('node-sass', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('node-sass', 'legacy' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work as a string ('node-sass', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('node-sass', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('sass-embedded', 'legacy' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a string ('sass-embedded', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('sass-embedded', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('sass-embedded', 'legacy' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a string ('sass-embedded', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('sass-embedded', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a string ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as a string ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as a string ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as a string ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('dart-sass', 'legacy' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as an async function ('dart-sass', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('dart-sass', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('dart-sass', 'legacy' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as an async function ('dart-sass', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('dart-sass', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as an async function ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as an async function ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('node-sass', 'legacy' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work as an async function ('node-sass', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('node-sass', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('node-sass', 'legacy' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work as an async function ('node-sass', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('node-sass', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('sass-embedded', 'legacy' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as an async function ('sass-embedded', 'legacy' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('sass-embedded', 'legacy' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('sass-embedded', 'legacy' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as an async function ('sass-embedded', 'legacy' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('sass-embedded', 'legacy' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as an async function ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`additionalData option should work as an async function ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work as an async function ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`additionalData option should work as an async function ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;
